static/css/start.css
/* ... */
header nav p:hover:after {
  width: 100%;
  left: 0;
}

.textfield {
  width: 50%;
  border-radius: 10px;
}

.padding {
  padding: 10px 5px 10px 5px;
}

.flex {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.margin {
  margin: 10px 10px 10px 10px;
}

.score-stats-container {
  height: 400px;
  width: 50%;
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: flex-end;
}
.stats-bar-container {
  width: 20%;
  display: flex;
  justify-content: center;
  align-items: flex-end;
}
.score-bar {
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  width: 4vw;
  height: 100%;
  background-color: blue;
  margin-left: 10px;
  margin-right: 10px;
  animation: 2.5s ease 0s 1 normal forwards running score;
}

@keyframes score {
  from {
    height: 0%;
  }
  to {
    height: 100%;
  }
}

.stats-label-container {
  display: flex;
  flex-direction: row;
  width: 50%;
  justify-content: center;
}

.stats-label {
  width: 20%;
  margin-top: 20px;
}

div.stats-work {
  background-color: lightseagreen;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  color: lightseagreen;
}
p.stats-work {
  color: lightseagreen;
}

div.stats-daily {
  background-color: lightpink;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  color: lightpink;
}
p.stats-daily {
  color: lightpink;
}

div.stats-health {
  background-color: lightgreen;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  color: lightgreen;
}
p.stats-health {
  color: lightgreen;
}

div.stats-education {
  background-color: lightcoral;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
  color: lightcoral;
}
p.stats-education {
  color: lightcoral;
}

.btn-primary {
  max-width: 100%;
  padding: 10px 5px 10px 5px;
  border-radius: 10px;
  text-decoration: none;
  text-align: center;
  border: 2px solid var(--clr-btn-primary-border);
  background-color: var(--clr-btn-primary);
  color: white;
  position: relative;
  height: 100%;
  box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.2);
}

.btn-primary:hover {
  transition: left 50ms, top 50ms;
  left: 5px;
  top: 5px;
  box-shadow: none;
}

#red {
  color: var(--clr-header-font);
}

.btn-text {
  background-color: transparent;
  border: none;
  text-decoration: underline;
  color: var(--clr-first);
}

a:visited {
  text-decoration: none;
  color: var(--clr-first);
}
a {
  text-decoration: none;
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 90%;
}

.btn-text:hover {
  text-decoration: none;
  /* color: rgb(29, 58, 153); */
}

.check {
  transform: scale(1.5);
}

.check:hover {
  animation: 200ms linear 0s 1 normal forwards running scale-check;
}

@keyframes scale-check {
  0% {
    transform: scale(1.5);
  }
  100% {
    transform: scale(2.5);
  }
}

form .entry {
  margin: 20px 0px;
  cursor: pointer;
}

form .entry * {
  cursor: pointer;
}

.underline:after {
  background: none repeat scroll 0 0 transparent;
  bottom: 0;
  content: "";
  display: block;
  position: relative;
  height: 2px;
  left: 50%;
  background: #fff;
  transition: width 0.3s ease 0s, left 0.3s ease 0s;
  width: 0;
}

.btn-text .underline:after {
  background: var(--clr-btn-primary);
}

.underline:hover::after {
  left: 0;
  width: 100%;
}

.entry {
  position: relative;
  display: grid;
  background-color: var(--clr-entry);
  padding: 15px;
  margin: 20px;
  border-radius: 10px;
  border: 2px solid var(--clr-entry-border);
  width: 100%;
  left: 0px;
  top: 0px;
  box-shadow: 3px 3px 2px rgba(0, 0, 0, 0.2);
}

.entry-container:hover .entry {
  transition: left 50ms, top 50ms, box-shadow 50ms;
}

.entry button {
  text-decoration: none;
}

.entry:hover {
  left: 5px;
  top: 5px;
  box-shadow: none;
}

.entry3 {
  grid-template-rows: 100%;
  grid-template-columns: 33% 33% 33%;
}

.entry2 {
  grid-template-rows: 100%;
  grid-template-columns: 50% 50%;
}

.btn-small {
  border-radius: 10px;
  width: 150px;
  padding: 10px 5px 10px 5px;
}

.form {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 20px;
  margin-bottom: 20px;
  width: 100%;
}

.container-horizontal {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.left-align {
  align-self: flex-start;
}

.align-content-right {
  display: flex;
  justify-content: flex-end;
  align-items: center;
}

.align-content-left {
  display: flex;
  justify-content: flex-start;
  align-items: center;
}

.margin-lr {
  margin-right: 10px;
  margin-left: 10px;
}

.font-marker {
  font-family: PermanentMarker;
}

h1 {
  font-size: 130%;
  font-weight: 500;
  color: var(--clr-header-font);
}
.primary-color {
  color: var(--clr-header-font);
}
main > div > .btn-text {
  color: var(--clr-header-font);
  text-decoration: none;
}

main {
  min-height: 100vh;
}

.container-main {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.big-font {
  font-size: 1.8em;
}

.extra-big-font {
  font-size: 5em;
  font-weight: 400;
}

.space-around {
  display: flex;
  justify-content: space-between;
  width: 100%;
}

.full-size {
  width: 100%;
}

.two-column-grid {
  display: grid;
  grid-template-columns: 50% 50%;
  column-gap: 20px;
}

input:focus {
  outline: none;
}

select:focus {
  outline: none;
}

.info-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.textfield input {
  margin-bottom: 10px;
  font-size: 1.5em;
  padding-left: 20px;
  padding-right: 20px;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  border-radius: 10px;
  background-color: var(--clr-background);
  border-top: 5px solid var(--clr-btn-primary);
  border-left: 5px solid var(--clr-btn-primary);
  border-color: var(--clr-btn-primary);
  border-width: 5px;
  color: var(--clr-header-font);
}
.half-size {
  width: 50%;
}
/* ... */

